added authentication - login & logout

--- a/blog-app-template/pages/allpost.html
+++ b/blog-app-template/pages/allpost.html
@@ -155,7 +155,7 @@
       </div>
     </footer>
 
-    <script src="/static/blogapp/url.js" id="url"></script>
+    <script src="/static/blog/url.js" id="url"></script>
 
 
 
